--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Own Stylesheet -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="media-queries.css">
-  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/assets/images/verify.pngimages/favicon.png" type="image/x-icon">
 
   <!-- Google font -->
 
@@ -71,6 +71,13 @@
       <p>Get to Know More</p>
       <span class="text-wrapper">
         <h1 class="title">About me</h1>
+        <div class="svg-container">
+          <svg class="icon" viewBox="0 0 436 92" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M3 11.6683C27.5507 31.3629 46.9422 39.6998 78.4385 38.3C106.882 37.0359 137.821 23.5277 164.275 13.6843C197.028 1.49724 261.319 -8.02763 280.351 30.7667C295.128 60.8895 272.979 96.9103 238.122 87.1069C224.684 83.3275 217.74 65.3879 223.692 52.9421C230.121 39.4995 249.34 33.0192 262.632 29.9179C298.328 21.5889 322.109 55.0269 354.41 60.8997C384.588 66.3865 406.997 52.8685 429.849 34.5864C431.806 33.0205 430.804 43.4396 430.804 46.0455C430.804 55.5985 432.714 51.3586 432.714 44.1356C432.714 39.4902 435.161 29.6135 428.894 32.2521C424.373 34.1558 414.869 34.5865 409.795 34.5865"
+              stroke="currentColor" stroke-width="5" stroke-linecap="round" />
+          </svg>
+        </div>
       </span>
 
       <div class="about-container">
@@ -107,7 +114,8 @@
             </div>
           </div>
 
-          <button class="btn"> Resume</button>
+          <a href="./assets/Akanksha Kushwah (Resume).pdf" download><button class="btn">
+              Resume</button></a>
         </div>
       </div>
 
@@ -119,64 +127,85 @@
       <p>Explore My</p>
       <span class="text-wrapper">
         <h1 class="title">Expertise</h1>
+        <div class="svg-container">
+          <svg class="icon" viewBox="0 0 436 92" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M3 11.6683C27.5507 31.3629 46.9422 39.6998 78.4385 38.3C106.882 37.0359 137.821 23.5277 164.275 13.6843C197.028 1.49724 261.319 -8.02763 280.351 30.7667C295.128 60.8895 272.979 96.9103 238.122 87.1069C224.684 83.3275 217.74 65.3879 223.692 52.9421C230.121 39.4995 249.34 33.0192 262.632 29.9179C298.328 21.5889 322.109 55.0269 354.41 60.8997C384.588 66.3865 406.997 52.8685 429.849 34.5864C431.806 33.0205 430.804 43.4396 430.804 46.0455C430.804 55.5985 432.714 51.3586 432.714 44.1356C432.714 39.4902 435.161 29.6135 428.894 32.2521C424.373 34.1558 414.869 34.5865 409.795 34.5865"
+              stroke="currentColor" stroke-width="5" stroke-linecap="round" />
+          </svg>
+        </div>
       </span>
 
 
       <div class="skill-container">
         <article>
-          <img src="images/verify.png" alt="checkmark">
+          <img src="assets/images/verify.png" alt="checkmark">
           <div>
             <h3>HTML</h3>
             <p>Experienced</p>
           </div>
         </article>
         <article>
-          <img src="images/verify.png" alt="checkmark">
+          <img src="assets/images/verify.png" alt="checkmark">
           <div>
             <h3>CSS</h3>
             <p>Intermediate</p>
           </div>
         </article>
         <article>
-          <img src="images/verify.png" alt="checkmark">
+          <img src="assets/images/verify.png" alt="checkmark">
           <div>
             <h3>Bootstrap</h3>
             <p>Intermediate</p>
           </div>
         </article>
         <article>
-          <img src="images/verify.png" alt="checkmark">
+          <img src="assets/images/verify.png" alt="checkmark">
           <div>
             <h3>MySql</h3>
             <p>Intermediate</p>
           </div>
         </article>
         <article>
-          <img src="images/verify.png" alt="checkmark">
+          <img src="assets/images/verify.png" alt="checkmark">
           <div>
             <h3>Github</h3>
             <p>Intermediate</p>
           </div>
         </article>
         <article>
-          <img src="images/verify.png" alt="checkmark">
+          <img src="assets/images/verify.png" alt="checkmark">
           <div>
             <h3>Python</h3>
             <p>Intermediate</p>
           </div>
         </article>
         <article>
-          <img src="images/verify.png" alt="checkmark">
+          <img src="assets/images/verify.png" alt="checkmark">
           <div>
             <h3>JavaScript</h3>
             <p>Intermediate</p>
           </div>
         </article>
         <article>
-          <img src="images/verify.png" alt="checkmark">
+          <img src="assets/images/verify.png" alt="checkmark">
           <div>
             <h3>Git</h3>
             <p>Experienced</p>
+          </div>
+        </article>
+        <article>
+          <img src="assets/images/verify.png" alt="checkmark">
+          <div>
+            <h3>Tailwind</h3>
+            <p>Intermediate</p>
+          </div>
+        </article>
+        <article>
+          <img src="assets/images/verify.png" alt="checkmark">
+          <div>
+            <h3>React</h3>
+            <p>Intermediate</p>
           </div>
         </article>
 
@@ -191,58 +220,65 @@
       <p>Browse My Recent</p>
       <span class="text-wrapper">
         <h1 class="title">Project</h1>
+        <div class="svg-container">
+          <svg class="icon" viewBox="0 0 436 92" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M3 11.6683C27.5507 31.3629 46.9422 39.6998 78.4385 38.3C106.882 37.0359 137.821 23.5277 164.275 13.6843C197.028 1.49724 261.319 -8.02763 280.351 30.7667C295.128 60.8895 272.979 96.9103 238.122 87.1069C224.684 83.3275 217.74 65.3879 223.692 52.9421C230.121 39.4995 249.34 33.0192 262.632 29.9179C298.328 21.5889 322.109 55.0269 354.41 60.8997C384.588 66.3865 406.997 52.8685 429.849 34.5864C431.806 33.0205 430.804 43.4396 430.804 46.0455C430.804 55.5985 432.714 51.3586 432.714 44.1356C432.714 39.4902 435.161 29.6135 428.894 32.2521C424.373 34.1558 414.869 34.5865 409.795 34.5865"
+              stroke="currentColor" stroke-width="5" stroke-linecap="round" />
+          </svg>
+        </div>
       </span>
 
       <div class="project-container">
         <div class="box">
           <a href="https://akkushwah.github.io/learnwise/" class="img-box" target="_blank">
-            <img src="images/learnwise.jpg
+            <img src="assets/images/learnwise.jpg
               " alt="some-image">
           </a>
-          <h3 class="project-heading">Project One</h3>
+          <h3 class="project-heading">Learnwise</h3>
           <a href="https://github.com/akkushwah/learnwise" target="_blank">
             <button class="btn">Code <i class="fa-solid fa-arrow-up-right-from-square"></i></button>
           </a>
         </div>
 
         <div class="box">
-          <a href="https://akkushwah.github.io/stackathon_portfolio/" class="img-box" target="_blank">
-            <img src="images/portfolio.jpg
+          <a href="https://akkushwah.github.io/TodoApp/" class="img-box" target="_blank">
+            <img src="assets/images/todo.png
               " alt="some-image">
           </a>
-          <h3 class="project-heading">Project Two</h3>
-          <a href="https://github.com/akkushwah/stackathon_portfolio" target="_blank">
+          <h3 class="project-heading">Todo App</h3>
+          <a href="https://github.com/akkushwah/TodoApp" target="_blank">
             <button class="btn">Code <i class="fa-solid fa-arrow-up-right-from-square"></i></button>
           </a>
         </div>
 
         <div class="box">
-          <a href="https://akkushwah.github.io/pizza_hub/" class="img-box" target="_blank">
-            <img src="images/pizza_hub.jpg
+          <a href="https://akkushwah.github.io/movieApp/" class="img-box" target="_blank">
+            <img src="assets/images/iMovies.png
               " alt="some-image">
           </a>
-          <h3 class="project-heading">Project Three</h3>
-          <a href="https://github.com/akkushwah/pizza_hub" target="_blank">
+          <h3 class="project-heading">iMovies</h3>
+          <a href="https://github.com/akkushwah/movieApp" target="_blank">
             <button class="btn">Code <i class="fa-solid fa-arrow-up-right-from-square"></i></button>
           </a>
         </div>
 
         <div class="box">
-          <a href="https://akkushwah.github.io/Band_Page/" class="img-box" target="_blank">
-            <img src="images/Screenshot 2024-03-29 144305.jpg" alt="some-images">
+          <a href="https://akkushwah.github.io/Keep_Note_Clone/" class="img-box" target="_blank">
+            <img src="assets/images/keepclone.png" alt="some-assets/images/verify.pngimages">
           </a>
-          <h3 class="project-heading">Project Four</h3>
-          <a href="https://github.com/akkushwah/Band_Page" target="_blank">
+          <h3 class="project-heading">Keep Note Clone</h3>
+          <a href="https://github.com/akkushwah/Keep_Note_Clone" target="_blank">
             <button class="btn">Code <i class="fa-solid fa-arrow-up-right-from-square"></i></button>
           </a>
         </div>
 
         <div class="box">
-          <a href="https://akkushwah.github.io/Usability_Business_website/" class="img-box" target="_blank">
-            <img src="images/usabilityhub_template.jpg" alt="some-images">
+          <a href="https://restaurant-web-akanksha.netlify.app/" class="img-box" target="_blank">
+            <img src="assets/images/Restaurant.png">
           </a>
-          <h3 class="project-heading">Project Five</h3>
-          <a href="https://github.com/akkushwah/Usability_Business_website" target="_blank">
+          <h3 class="project-heading">Restaurant</h3>
+          <a href="https://github.com/akkushwah/Restaurant_Web" target="_blank">
             <button class="btn">Code <i class="fa-solid fa-arrow-up-right-from-square"></i></button>
           </a>
         </div>
@@ -256,6 +292,13 @@
       <p>Get in Touch</p>
       <span class="text-wrapper">
         <h1 class="title">Contact Me</h1>
+        <div class="svg-container">
+          <svg class="icon" viewBox="0 0 436 92" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M3 11.6683C27.5507 31.3629 46.9422 39.6998 78.4385 38.3C106.882 37.0359 137.821 23.5277 164.275 13.6843C197.028 1.49724 261.319 -8.02763 280.351 30.7667C295.128 60.8895 272.979 96.9103 238.122 87.1069C224.684 83.3275 217.74 65.3879 223.692 52.9421C230.121 39.4995 249.34 33.0192 262.632 29.9179C298.328 21.5889 322.109 55.0269 354.41 60.8997C384.588 66.3865 406.997 52.8685 429.849 34.5864C431.806 33.0205 430.804 43.4396 430.804 46.0455C430.804 55.5985 432.714 51.3586 432.714 44.1356C432.714 39.4902 435.161 29.6135 428.894 32.2521C424.373 34.1558 414.869 34.5865 409.795 34.5865"
+              stroke="currentColor" stroke-width="5" stroke-linecap="round" />
+          </svg>
+        </div>
       </span>
 
       <div class="contact-container">
@@ -276,19 +319,28 @@
 
         <div class="social-icons">
           <div class="tooltip">
-            <i class="fa-solid fa-envelope"></i>
+            <a href="mailto:akankshakushwah.be@gmail.com" target="_blank">
+              <i class="fa-solid fa-envelope"></i>
+            </a>
             <span class="tooltiptext">Email</span>
+
           </div>
           <div class="tooltip">
-            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/akanksha1501/" target="_blank">
+              <i class="fa-brands fa-linkedin"></i>
+            </a>
             <span class="tooltiptext">Linkedin</span>
           </div>
           <div class="tooltip">
-            <i class="fa-brands fa-github"></i>
+            <a href="https://github.com/akkushwah/" target="_blank">
+              <i class="fa-brands fa-github"></i>
+            </a>
             <span class="tooltiptext">Github</span>
           </div>
           <div class="tooltip">
-            <i class="fa-brands fa-discord"></i>
+            <a href="https://discordapp.com/" target="_blank">
+              <i class="fa-brands fa-discord"></i>
+            </a>
             <span class="tooltiptext">Discord</span>
           </div>
         </div>
@@ -304,7 +356,7 @@
     <!--------------- footer Page -------------->
 
     <footer>
-      <p>© 2023 Akanksha Kushwah. All Rights Reserved.</p>
+      <p>© 2024 Akanksha Kushwah. All Rights Reserved.</p>
     </footer>
 
 
